--- a/arch/arm64/configs/exynos9611-m31_defconfig
+++ b/arch/arm64/configs/exynos9611-m31_defconfig
@@ -580,8 +580,8 @@ CONFIG_ARM64_MODULE_CMODEL_LARGE=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="androidboot.selinux=permissive"
-CONFIG_CMDLINE_EXTEND=y
+# CONFIG_CMDLINE is not set
+# CONFIG_CMDLINE_EXTEND is not set
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 # CONFIG_UH is not set
