ARM64 : configs : m31 : use correct mac address filename

--- a/arch/arm64/configs/exynos9611-m31_defconfig
+++ b/arch/arm64/configs/exynos9611-m31_defconfig
@@ -580,8 +580,8 @@ CONFIG_ARM64_MODULE_CMODEL_LARGE=y
 #
 # Boot options
 #
-# CONFIG_CMDLINE is not set
-# CONFIG_CMDLINE_EXTEND is not set
+CONFIG_CMDLINE="androidboot.selinux=permissive"
+CONFIG_CMDLINE_EXTEND=y
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 # CONFIG_UH is not set
@@ -1833,7 +1833,7 @@ CONFIG_SCSC_WIFILOGGER_DEBUGFS=y
 # CONFIG_SCSC_WIFILOGGER_TEST is not set
 CONFIG_SCSC_WLAN_ENHANCED_LOGGING=y
 # CONFIG_SCSC_WLAN_ACM_API is not set
-CONFIG_SCSC_WLAN_MAC_ADDRESS_FILENAME="/efs/wifi/.mac.info"
+CONFIG_SCSC_WLAN_MAC_ADDRESS_FILENAME="/mnt/vendor/efs/wifi/.mac.info"
 CONFIG_SCSC_WLAN_MAX_INTERFACES=3
 CONFIG_SCSC_WLAN_AP_INFO_FILE=y
 CONFIG_SCSC_WLAN_WIFI_SHARING=y
