--- a/arch/arm64/configs/exynos9611-m31_defconfig
+++ b/arch/arm64/configs/exynos9611-m31_defconfig
@@ -331,7 +331,6 @@ CONFIG_BLK_DEV_CRYPT_DISKCIPHER=y
 # CONFIG_BLK_DEV_ZONED is not set
 # CONFIG_BLK_CMDLINE_PARSER is not set
 # CONFIG_BLK_WBT is not set
-CONFIG_BLK_DEBUG_FS=y
 # CONFIG_BLK_SED_OPAL is not set
 
 #
@@ -1469,7 +1468,6 @@ CONFIG_SCSC_STATIC_RING_SIZE=4194304
 # CONFIG_SCSC_CHV_SUPPORT is not set
 # CONFIG_SCSC_GPR4_CON_DEBUG is not set
 CONFIG_SCSC_BUILD_TYPE=""
-CONFIG_SCSC_LOGRING_DEBUGFS=y
 CONFIG_SCSC_LOG_COLLECTION=y
 CONFIG_SCSC_COMMON_HCF=y
 # CONFIG_SCSC_WLBT_AUTORECOVERY_PERMANENT_DISABLE is not set
@@ -1838,7 +1836,6 @@ CONFIG_SCSC_WLAN_MUTEX_DEBUG=y
 CONFIG_SCSC_WLAN_HANG_TEST=y
 # CONFIG_SCSC_WLAN_NAT_KEEPALIVE_DISABLE is not set
 CONFIG_SCSC_WIFILOGGER=y
-CONFIG_SCSC_WIFILOGGER_DEBUGFS=y
 # CONFIG_SCSC_WIFILOGGER_TEST is not set
 CONFIG_SCSC_WLAN_ENHANCED_LOGGING=y
 # CONFIG_SCSC_WLAN_ACM_API is not set
@@ -4163,7 +4160,6 @@ CONFIG_PL330_DMA=y
 # DMABUF options
 #
 CONFIG_SYNC_FILE=y
-CONFIG_SW_SYNC=y
 CONFIG_DMA_BUF_CONTAINER=y
 # CONFIG_DMA_BUF_CONTAINER_TEST is not set
 CONFIG_DMABUF_TRACE=y
@@ -4462,7 +4458,6 @@ CONFIG_SHUB_PMUCAL=y
 CONFIG_EXYNOS_PMU=y
 CONFIG_ECT=y
 CONFIG_ECT_DUMP=y
-CONFIG_EXYNOS_RGT=y
 CONFIG_EXYNOS_PM_DOMAINS=y
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_EXYNOS_DEBUG=y
@@ -4869,8 +4864,6 @@ CONFIG_GENERIC_PHY=y
 # CONFIG_PHY_EXYNOS5_USBDRD is not set
 # CONFIG_PHY_EXYNOS_USBDRD is not set
 CONFIG_PHY_EXYNOS_USBDRD3=y
-CONFIG_PHY_EXYNOS_DEBUGFS=y
-CONFIG_PHY_EXYNOS_DP_DEBUGFS=y
 CONFIG_PHY_SAMSUNG_USB_CAL=y
 CONFIG_PHY_EXYNOS8895_MIPI=y
 # CONFIG_PHY_EXYNOS_DISPLAYPORT is not set
@@ -5415,7 +5408,7 @@ CONFIG_FRAME_WARN=4096
 # CONFIG_READABLE_ASM is not set
 # CONFIG_UNUSED_SYMBOLS is not set
 # CONFIG_PAGE_OWNER is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
